# fantasy-pl-vercel-proxy-rs

./: .gitignore  API_REFERENCE.md  BENCHMARK_REPORT.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  ERROR_HANDLING_REPORT.md  MIGRATION_SUMMARY.md  README.md  TECHNICAL_ANALYSIS.md  benchmark-results.json  benchmark.js  benchmark.ps1  test-api.js  test-api.ps1  test-benchmark-error-handling.js  vercel.json
.github/: copilot-instructions.md
api/: handler.rs
backup-data/: bootstrap-static.json
tests/: integration_tests.rs
