[package]
name = "fantasy-pl-vercel-proxy-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
moka = { version = "0.12", features = ["future"] }
chrono = { version = "0.4", features = ["serde"] }
vercel_runtime = "1.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Each handler has to be specified as [[bin]]
[[bin]]
name = "handler"
path = "api/handler.rs"
